# genoray-cli

./: pixi.toml  pyproject.toml
genoray_cli/: __main__.py
