[project]
name = "genoray-cli"
version = "0.1.0"
description = "Command line interface for genoray"
authors = [{ name = "David Laub", email = "dlaub@ucsd.edu" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.13"                               # blocked by cyvcf2
dependencies = ["genoray", "cyclopts"]

[project.scripts]
genoray = "genoray_cli.__main__:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
